updated generation of pubkey with secp256k1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ else ()
 endif (APPLE)
 
 include_directories (${CMAKE_SOURCE_DIR})
+include_directories ("${CMAKE_BINARY_DIR}/deps/include")
 
 set(Boost_USE_STATIC_LIBS        ON)
 set(Boost_USE_MULTITHREADED      ON)
@@ -277,7 +278,6 @@ add_library (common
 	mcp/common/common.cpp
 	)
 
-	
 FILE(GLOB NODE_EVM_SOURCES
     mcp/node/evm/Precompiled.cpp
     mcp/node/evm/Precompiled.h
