Update Submodule Branch Track

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,9 +10,11 @@
 [submodule "libevm"]
 	path = libevm
 	url = https://github.com/computecoin-network/libevm.git
+	branch = mcp_dev
 [submodule "libdevcore"]
 	path = libdevcore
 	url = https://github.com/computecoin-network/libdevcore.git
+	branch = dev
 [submodule "libdevcrypto"]
 	path = libdevcrypto
 	url = https://github.com/computecoin-network/libdevcrypto.git
