--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,6 @@ else ()
 endif (APPLE)
 
 include_directories (${CMAKE_SOURCE_DIR})
-include_directories ("${CMAKE_BINARY_DIR}/deps/include")
 
 set(Boost_USE_STATIC_LIBS        ON)
 set(Boost_USE_MULTITHREADED      ON)
@@ -66,7 +65,7 @@ if (BOOST_CUSTOM)
     list(APPEND CMAKE_MODULE_PATH ".\\" ${CMAKE_SOURCE_PATH})
 endif (BOOST_CUSTOM)
 
-find_package (Boost)
+find_package (Boost 1.66.0 REQUIRED COMPONENTS date_time filesystem system log log_setup thread program_options regex chrono atomic)
 include_directories (${Boost_INCLUDE_DIR})
 
 
@@ -278,6 +277,7 @@ add_library (common
 	mcp/common/common.cpp
 	)
 
+	
 FILE(GLOB NODE_EVM_SOURCES
     mcp/node/evm/Precompiled.cpp
     mcp/node/evm/Precompiled.h
