Update To Address

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,8 @@ endif (BOOST_CUSTOM)
 
 find_package (Boost 1.66.0 REQUIRED COMPONENTS date_time filesystem system log log_setup thread program_options regex chrono atomic)
 include_directories (${Boost_INCLUDE_DIR})
+include_directories ("${CMAKE_BINARY_DIR}/deps/include")
+
 
 
 set(sodium_INCLUDE_DIR "" CACHE PATH "sodium include directory")
