--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,31 +73,6 @@ endif (BOOST_CUSTOM)
 find_package (Boost 1.66.0 REQUIRED COMPONENTS date_time filesystem system log log_setup thread program_options regex chrono atomic)
 include_directories (${Boost_INCLUDE_DIR})
 
-
-set(sodium_INCLUDE_DIR "" CACHE PATH "sodium include directory")
-set(sodium_LIBRARY_DEBUG "" CACHE FILEPATH "Debug sodium library directory")
-set(sodium_LIBRARY_RELEASE "" CACHE FILEPATH "Release sodium library directory")
-if ((NOT sodium_INCLUDE_DIR STREQUAL "") OR (NOT sodium_LIBRARY_DEBUG STREQUAL "") OR (NOT sodium_LIBRARY_RELEASE STREQUAL ""))
-	if (NOT EXISTS "${sodium_INCLUDE_DIR}/sodium.h")
-	    message(FATAL_ERROR, "sodium_INCLUDE_DIR error")
-		return()
-	endif()
-	if (NOT EXISTS ${sodium_LIBRARY_DEBUG})
-	    message(FATAL_ERROR, "sodium_LIBRARY_DEBUG error")
-		return()
-	endif()
-	if (NOT EXISTS ${sodium_LIBRARY_RELEASE})
-	    message(FATAL_ERROR, "sodium_LIBRARY_RELEASE error")
-		return()
-	endif()
-	
-	include_directories (${sodium_INCLUDE_DIR})
-	set(sodium_LIBRARY debug ${sodium_LIBRARY_DEBUG} optimized ${sodium_LIBRARY_RELEASE})
-else ()
-    set(sodium_LIBRARY "")
-endif()
-
-
 set(rocksdb_INCLUDE_DIR "" CACHE PATH "rocksdb include directory")
 set(rocksdb_LIBRARY_DEBUG "" CACHE FILEPATH "Debug rocksdb library directory")
 set(rocksdb_LIBRARY_RELEASE "" CACHE FILEPATH "Release rocksdb library directory")
@@ -173,12 +148,7 @@ else ()
     set(ZLIB_LIBRARY "")
 endif()
 
-if (WIN32)
-    if ((sodium_INCLUDE_DIR STREQUAL "") OR (sodium_LIBRARY STREQUAL ""))
-	    message(FATAL_ERROR, "sodium_INCLUDE_DIR or sodium_LIBRARY can not be null")
-		return()
-	endif()
-	
+if (WIN32)	
 	if ((rocksdb_INCLUDE_DIR STREQUAL "") OR (rocksdb_LIBRARY STREQUAL ""))
 	    message(FATAL_ERROR, "rocksdb_INCLUDE_DIR or rocksdb_LIBRARY can not be null")
 		return()
@@ -440,11 +410,11 @@ add_subdirectory(lz4/contrib/cmake_unofficial)
 
 set_target_properties (blake2 PROPERTIES COMPILE_FLAGS "${PLATFORM_C_FLAGS} ${PLATFORM_COMPILE_FLAGS} -D__SSE2__")
 set_target_properties (db PROPERTIES COMPILE_FLAGS "${PLATFORM_CXX_FLAGS} ${PLATFORM_COMPILE_FLAGS}")
-set_target_properties (common rpc wallet consensus core node devcrypto devcore p2p mcp evm PROPERTIES COMPILE_FLAGS "${PLATFORM_CXX_FLAGS} ${PLATFORM_COMPILE_FLAGS} -DQT_NO_KEYWORDS -DMCP_VERSION=${VERSION} -DBOOST_ASIO_HAS_STD_ARRAY=1 -DSODIUM_STATIC")
+set_target_properties (common rpc wallet consensus core node devcrypto devcore p2p mcp evm PROPERTIES COMPILE_FLAGS "${PLATFORM_CXX_FLAGS} ${PLATFORM_COMPILE_FLAGS} -DQT_NO_KEYWORDS -DMCP_VERSION=${VERSION} -DBOOST_ASIO_HAS_STD_ARRAY=1")
 set_target_properties (common rpc wallet consensus core node devcrypto devcore p2p mcp PROPERTIES LINK_FLAGS "${PLATFORM_LINK_FLAGS}")
 set_target_properties (libminiupnpc-static PROPERTIES COMPILE_FLAGS "${PLATFORM_C_FLAGS} ${PLATFORM_COMPILE_FLAGS}")
 
-set_target_properties (test_account PROPERTIES COMPILE_FLAGS "${PLATFORM_CXX_FLAGS} ${PLATFORM_COMPILE_FLAGS} -DQT_NO_KEYWORDS -DMCP_VERSION=${VERSION} -DBOOST_ASIO_HAS_STD_ARRAY=1 -DSODIUM_STATIC")
+set_target_properties (test_account PROPERTIES COMPILE_FLAGS "${PLATFORM_CXX_FLAGS} ${PLATFORM_COMPILE_FLAGS} -DQT_NO_KEYWORDS -DMCP_VERSION=${VERSION} -DBOOST_ASIO_HAS_STD_ARRAY=1")
 set_target_properties (test_account PROPERTIES LINK_FLAGS "${PLATFORM_LINK_FLAGS}")
 
 if (WIN32)
@@ -457,12 +427,6 @@ else ()
 	LINK_DIRECTORIES(/usr/local/lib/)
     LINK_DIRECTORIES(/usr/lib/x86_64-linux-gnu/)
 endif (WIN32)
-
-if (sodium_LIBRARY STREQUAL "")
-    set (DEPENDENCE_LIBS sodium)
-else ()
-    set (DEPENDENCE_LIBS ${sodium_LIBRARY})
-endif()
 
 if (rocksdb_LIBRARY STREQUAL "")
     set (DEPENDENCE_LIBS ${DEPENDENCE_LIBS} rocksdb)
