--- a/test/contracts/mcp-dydx/.env
+++ b/test/contracts/mcp-dydx/.env
@@ -1,4 +1,4 @@
-HUYGENS_DEV_URL=http://localhost:8554
+HUYGENS_DEV_URL=
 HUYGENS_DEV_PRIVATE_KEY=""
-NETWORK_ID=8
-RESET_SNAPSHOT_ID=0x2
+NETWORK_ID=
+RESET_SNAPSHOT_ID=
