mcp change for new boost, rocksdb and gcc version (#61)
* initial commit of readme

* improve rpc exception: align with eth

* add exceptions to js to usigned number

* add hex option for js to usign number

* change result structure for action

* rpc exception merge

* correct readme

* delete unecessary changes v0

* delete unnecessary changes

* improve exception, delete unnecessary comments

* remove NEW_

* correct unsolved conflicts during merging

* align with eth structure:

* delete redundant type check

* merge correction

* add shared_ptr in response for solving segmentation fault

* correct response: move this_l out of try catch structure

* delete redundent variable and header in handler

* delete request in handler.hpp, and revert changes in libdevcore

* revert libdevcore

* revert libdevcore

* revert git ignore

* add length restriction for hash and address

* add restriction at eth_getlog

* delete redundant comment

* remove changes in libdevcore

* correct handler without changing structure of exception

* correct handler without changing structure of exception

* correct handler without changing structure of exception

* correct handler without changing structure of exception

* correct handler without changing structure of exception

* change byte type for c++17 upgrade

* change submodule libdevcore: resolve byte conflict in c++17

* change submodule libdevcrypto: resolve byte conflict in c++17

* change submodule libevm: resolve byte conflict in c++17

* change port number back to default

* edit common, node, p2p and rpc for the update of rocksdb, boost and gcc

* remove updated submodule

* remove updated submodule

---------

Co-authored-by: Fangze Xu <fx33@duke.edu>
Co-authored-by: PowderXu <jms@mainnet-code-debug.asia-east2-a.c.fiery-diorama-395214.internal>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 2.8.11)
+cmake_minimum_required (VERSION 3.5.1)
 
 project (mcp)
 
@@ -38,7 +38,7 @@ endif (WIN32)
 if (WIN32)
 	set (PLATFORM_CXX_FLAGS "/bigobj /MP /wd4086 /wd4996 /wd4503 /wd4267 /wd4180 /wd4290 /wd4297 /wd4244 /wd4800")
 else (WIN32)
-	set (PLATFORM_CXX_FLAGS "-std=c++14 ")
+	set (PLATFORM_CXX_FLAGS "-std=c++17 ")
 endif (WIN32)
 
 if (WIN32)
@@ -52,7 +52,7 @@ if (APPLE)
 elseif (WIN32)
 	set (PLATFORM_LINK_FLAGS "")
 else ()
-	set (PLATFORM_LINK_FLAGS "-static-libgcc -static-libstdc++")
+	set (PLATFORM_LINK_FLAGS "-g -static-libgcc -static-libstdc++")
 endif (APPLE)
 
 include(ProjectLibFF)
@@ -66,7 +66,7 @@ if (BOOST_CUSTOM)
     list(APPEND CMAKE_MODULE_PATH ".\\" ${CMAKE_SOURCE_PATH})
 endif (BOOST_CUSTOM)
 
-find_package (Boost 1.66.0 REQUIRED COMPONENTS date_time filesystem system log log_setup thread program_options regex chrono atomic)
+find_package (Boost 1.81.0 REQUIRED COMPONENTS date_time filesystem system log log_setup thread program_options regex chrono atomic)
 include_directories (${Boost_INCLUDE_DIR})
 
 set(rocksdb_INCLUDE_DIR "" CACHE PATH "rocksdb include directory")
