--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,24 @@
 [submodule "cryptopp"]
 	path = cryptopp
-	url = https://github.com/computecoin-network/cryptopp.git
+	url = https://github.com/oort-tech/cryptopp.git
 	branch = master
 [submodule "miniupnp"]
 	path = miniupnp
-	url = https://github.com/computecoin-network/miniupnp.git
+	url = https://github.com/oort-tech/miniupnp.git
 	branch = master
 [submodule "evmc"]
 	path = evmc
-	url = https://github.com/computecoin-network/evmc.git
+	url = https://github.com/oort-tech/evmc.git
 	branch = mcp
 [submodule "libevm"]
 	path = libevm
-	url = https://github.com/computecoin-network/libevm.git
+	url = https://github.com/oort-tech/libevm.git
 	branch = zhou_truffle
 [submodule "libdevcore"]
 	path = libdevcore
-	url = https://github.com/computecoin-network/libdevcore.git
+	url = https://github.com/oort-tech/libdevcore.git
 	branch = dev
 [submodule "libdevcrypto"]
 	path = libdevcrypto
-	url = https://github.com/computecoin-network/libdevcrypto.git
+	url = https://github.com/oort-tech/libdevcrypto.git
 	branch = zhou_truffle
