--- a/test/contracts/mcp-dydx/.env.example
+++ b/test/contracts/mcp-dydx/.env.example
@@ -1,4 +1,4 @@
-CCNBETA_END_POINT=
+CCNBETA_END_POINT=https://dev-rpc.oortech.com
 CCNBETA_PRIVATE_KEY=
-NETWORK_ID=
-RESET_SNAPSHOT_ID=
+NETWORK_ID=97000
+RESET_SNAPSHOT_ID=1
