update env sample

--- a/test/contracts/mcp-dydx/.env.example
+++ b/test/contracts/mcp-dydx/.env.example
@@ -1,4 +1,4 @@
-CCNBETA_END_POINT=https://dev-rpc.oortech.com
+CCNBETA_URL=
 CCNBETA_PRIVATE_KEY=
-NETWORK_ID=97000
-RESET_SNAPSHOT_ID=1
+LOCAL_PRIVATE_KEY=
+LOCAL_URL=http://localhost:8545
