eth_getLogs add LogFilter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -331,6 +331,8 @@ add_library (rpc
 	mcp/rpc/jsonHelper.hpp
 	mcp/rpc/json.cpp
 	mcp/rpc/json.hpp
+	mcp/rpc/LogFilter.cpp
+	mcp/rpc/LogFilter.hpp
 	mcp/rpc/exceptions.hpp
 	)
 	
